--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,13 +2,13 @@
     margin-left: 10px;
 }
 
-.navbar {
+.container-fluid {
     max-width: 80%;
     margin: auto;
 }
 
 @media (max-width: 990px) {
-    .navbar{ 
+    .container-fluid{ 
         max-width: 100%;
     }
 }
