--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,15 @@
     margin: auto;
 }
 
-RouterProvider {
-    margin-top: 135px;
+.main {
+    margin-top: 120px;
 }
 
 @media (max-width: 990px) {
     .container-fluid{ 
         max-width: 100%;
+    }
+    .main {
+        margin-top: 135px;
     }
 }
