Added scaling animation to cards

--- a/src/components/header/Nav.css
+++ b/src/components/header/Nav.css
@@ -1,5 +1,12 @@
 .loginLogoutButton {
     margin-left: 10px;
+    transition: 0.3s;
+
+}
+
+.loginLogoutButton:hover {
+    scale: 1.05;
+    transition: 0.3s;
 }
 
 .container-fluid {
