--- a/src/custom.scss
+++ b/src/custom.scss
@@ -4,12 +4,14 @@
 @import "bootstrap";
 
 /* ------- customize primary buttons -------- */   
-$mynewcolor: rgb(239, 91, 42);
+$mynewcolor: #f25929;
 
 .btn-primary {
     @include button-variant($mynewcolor, darken($mynewcolor, 7.5%), darken($mynewcolor, 10%), lighten($mynewcolor,5%), lighten($mynewcolor, 10%), darken($mynewcolor,30%));
     color: white;
 }
+
+
 
 .btn-outline-primary {
     @include button-outline-variant($mynewcolor, #222222, lighten($mynewcolor,5%), $mynewcolor);
