--- a/src/pages/dashboard/travel-teams-dashboard/create-travel-team/CreateTravelTeam.css
+++ b/src/pages/dashboard/travel-teams-dashboard/create-travel-team/CreateTravelTeam.css
@@ -20,6 +20,14 @@ span > i {
 	margin-bottom: 10px;
 }
 
+.breadcrumb-item {
+  background-color: white !important;
+}
+
+a {
+  color: #f25929;
+  text-decoration: none;
+}
 :root {
   --color-pink: #ee415f;
   --color-green: #58ce97;
@@ -61,10 +69,6 @@ body {
   font-family: sans-serif;
   font-size: 16px;
   line-height: 1.6;
-}
-
-a {
-  color: var(--color-pink);
 }
 
 p {
