--- a/src/pages/dashboard/travel-teams-dashboard/TravelTeamsDashboard.css
+++ b/src/pages/dashboard/travel-teams-dashboard/TravelTeamsDashboard.css
@@ -1,10 +1,10 @@
 .btn-label {
 	position: relative;
-	left: -12px;
+	left: -15px !important;
 	display: inline-block;
 	padding: 6px 12px;
 	background: rgba(0, 0, 0, 0.15);
-	border-radius: 3px 0 0 3px;
+	border-radius: 5px 0 0 6px;
 }
 
 .create-button {
@@ -17,6 +17,7 @@
 }
 
 .btn-labeled {
+	
 	padding-top: 0;
 	padding-bottom: 0;
 }
