--- a/src/pages/dashboard/travel-teams-dashboard/create-travel-team/CreateTravelTeam.css
+++ b/src/pages/dashboard/travel-teams-dashboard/create-travel-team/CreateTravelTeam.css
@@ -1,13 +1,36 @@
 .btn-label {
 	position: relative;
-	left: -12px;
+	left: -14px;
 	display: inline-block;
 	padding: 6px 12px;
 	background: rgba(0, 0, 0, 0.15);
-	border-radius: 3px 0 0 3px;
+	border-radius: 5px 0 0 5px;
 }
 
 .btn-labeled {
+  scale: 1.00;
+  transition: 0.3s;
+  width: 120px;
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+.btn-labeled:hover {
+  scale: 1.03;
+  transition: 0.3s;
+}
+
+.btn-label-1 {
+	position: relative;
+	right: -23px;
+	display: inline-block;
+	padding: 6px 12px;
+	background: rgba(0, 0, 0, 0.15);
+	border-radius: 0 5px 5px 0;
+}
+
+.btn-labeled-1 {
+  width: 120px;
 	padding-top: 0;
 	padding-bottom: 0;
 }
@@ -101,7 +124,7 @@ code {
   position: relative;
 
   width: 100%;
-  margin-bottom: 48px;
+  
 }
 
 .menu {
