--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900 */
+
+* {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+}
+
 .loginLogoutButton {
     margin-left: 10px;
 }
