--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,22 +1,18 @@
 /* custom.scss */    
 
 /* import the necessary Bootstrap files */
-// @import "bootstrap";
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
+@import "bootstrap";
 
 /* ------- customize primary buttons -------- */   
 $primary: #f25929;
 
-// .btn-primary {
-//     @include button-variant($primary, darken($primary, 7.5%), darken($primary, 10%), lighten($primary,5%), lighten($primary, 10%), darken($primary,30%));
-//     color: white;
-// }
+.btn-primary {
+    @include button-variant($primary, darken($primary, 7.5%), darken($primary, 10%), lighten($primary,5%), lighten($primary, 10%), darken($primary,30%));
+    color: white;
+}
 
 
 
-// .btn-outline-primary {
-//     @include button-outline-variant($primary, #222222, lighten($primary,5%), $primary);
-// }
-
-@import "node_modules/bootstrap/scss/bootstrap";
+.btn-outline-primary {
+    @include button-outline-variant($primary, #222222, lighten($primary,5%), $primary);
+}
