Fixed 4 hour date difference issue. Rec leagues now display the correct information

--- a/src/pages/dashboard/rec-leagues-dashboard/create-rec-league/date-browser/DateBrowser.css
+++ b/src/pages/dashboard/rec-leagues-dashboard/create-rec-league/date-browser/DateBrowser.css
@@ -28,6 +28,6 @@
   margin: auto;
   width: 10px;
   height: 10px;
-  background-color: orange;
+  background-color: #f25929;
   border-radius: 50%;
 }
