--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
 
@@ -8,16 +7,21 @@
 }
 
 .loginLogoutButton {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .container-fluid {
-    max-width: 80%;
-    margin: auto;
+  max-width: 80%;
+  margin: auto;
 }
 
+.ag-theme-quartz {
+}
+
+
+
 @media (max-width: 990px) {
-    .container-fluid{ 
-        max-width: 100%;
-    }
+  .container-fluid {
+    max-width: 100%;
+  }
 }
